# AI-skinme

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  app.py  console_style.py  data-mining.ipynb  main.py  pyproject.toml  requirements.txt  requirments.txt  run_app.py  skin-check.ipynb  skin_chatbot.py  skin_knowledge.py
data/: CELESTIA SKIN CARE DASTASET.csv  db_import_template.csv  ingredient_lookup.csv  ingredient_training_sample.csv  ingredientsList.csv  intent_training.csv.example  pre_alternatives.csv  products_ingredients_dataset.csv  skin_disease_labels.csv.example  skinme_products.csv
docs/: CHATBOT_WITH_BACKEND.md  DEPLOYMENT_SUBDOMAIN.md  ENCRYPTION_AND_SECURITY.md  FRONTEND_CHATBOT_API.md  SPRING_BACKEND_INTEGRATION.md  TRAINING_WITH_BACKEND.md
models/artifacts/: intent_model.joblib  product_type_model.joblib
scripts/: sync_products.py  train.py  train_products.py  train_skin_condition.py
src/skin_assistant/: __init__.py
src/skin_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/skin_assistant/api/: app.py  routes.py
src/skin_assistant/config/: settings.py
src/skin_assistant/domain/: __init__.py  schemas.py
src/skin_assistant/infrastructure/: __init__.py  chat_repository.py  knowledge_repo.py  scraper.py  skinme_client.py  skinme_db.py
src/skin_assistant/models/: __init__.py  intent_labels.py  predictor.py  product_trainer.py  skin_condition_trainer.py  trainer.py
src/skin_assistant/services/: chat_service.py
