[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skin-assistant"
version = "0.2.0"
description = "AI Skin Assistant API and ML models for skincare recommendations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]
streamlit = ["streamlit>=1.28.0"]

[tool.setuptools.packages.find]
where = ["src"]
